[package]
name = "clock"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
color-eyre = "0.6.1"
fastrand = "1.7.0"
itertools = "0.10.3"
minifb = "0.22.0"
prime_tools = "0.3.4"

# [profile.release]
# debug = true
